# Aero

./: .gitignore  README.md  cli.py  cli3d.py  gui.py  mpi_cli3d.py  open_gui.command  pyproject.toml  requirements.txt  setup.cfg
aero/: autoconfig.py  benchmarks.py  case.py  diagnostics.py  forces.py  forces3d.py  hdf5_writer.py  observables.py  run_manifest.py  spectral.py  stress.py  visualization.py  visualization3d.py
aero/geometry/: base.py  cylinder.py  image_mask.py  polygon.py  rectangle.py
aero/geometry3d/: __init__.py  base.py  box.py  cylinder3d.py  mesh_mask.py  mesh_preview.py  signed_distance.py  sphere.py  stl_io.py  stl_prep.py
aero/gui/: __init__.py  app.py  cases.py  charts.py  flow_window.py  geometry_preview.py  mpl_viewport.py  run_data.py  state.py  styles.py  viewport.py
configs/: reference_cylinder.json
tests/: test_autoconfig.py  test_benchmark.py  test_benchmarks_module.py  test_boundary.py  test_case_reporting.py  test_cupy_backend.py  test_d2q9.py  test_diagnostics_stationarity.py  test_forces.py  test_geometry.py  test_geometry_preview.py  test_ibm.py  test_inlet3d.py  test_les.py  test_mesh_mask.py  test_mpi.py  test_multiblock.py  test_observables.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_sample_stl.py  test_scalar_transport.py  test_sem_inlet.py  test_signed_distance.py  test_solver.py  test_sponge.py  test_stl_prep.py  test_streamwise_bc3d.py  test_stress.py  test_thermal.py  test_tier3.py  test_trt.py  test_viewport_smoke.py  test_wall_and_inflow.py
(+26 files in other folders)
